fix spacing issue above index footer

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,7 +61,7 @@ a:hover {
 img {
 	height: 18%;
 	width: 18%;
-	margin-bottom: 150px;
+	margin-bottom: 15%;
 }
 .menu {
 	text-align: center;
